Lamda function in assembly

--- a/Implementierung/Makefile
+++ b/Implementierung/Makefile
@@ -1,7 +1,7 @@
 CFLAGS = -O3
 
 all: rsa
-rsa: main.c rsa_params.S
+rsa: main.c rsa_params.S carmicael.S
 	$(CC) $(CFLAGS) -o $@ $^
 clean:
 	rm -f rsa
