--- a/Implementierung/Makefile
+++ b/Implementierung/Makefile
@@ -1,7 +1,6 @@
-CFLAGS = -g -O3
+CFLAGS = -O3 -lm
 
-all: main
-main: main.c rsa_params_v0.S rsa_params_v1.c rsa_params_v2.S rsa_params_v3.c
+main: main.c rsa_params_v0.S rsa_params_v1.c rsa_params_v2.c rsa_params_v3.S rsa_params_v4.c
 	$(CC) $(CFLAGS) -o $@ $^
 clean:
 	rm -f main
