--- a/Implementierung/Makefile
+++ b/Implementierung/Makefile
@@ -1,6 +1,6 @@
 CFLAGS = -O3 -lm
 
-main: main.c rsa_params_v0.S rsa_params_v1.c rsa_params_v2.c rsa_params_v3.S rsa_params_v4.c
+get_rsa_params: main.c rsa_params_v0.S rsa_params_v1.c rsa_params_v2.c rsa_params_v4.c rsa_params_v5.S rsa_params_v6.c
 	$(CC) $(CFLAGS) -o $@ $^
 clean:
-	rm -f main
+	rm -f get_rsa_params
